.jjconflict-side-1/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__aliased_error_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam.{Error as Thing}\npub fn main() { Thing }"
---
let
  gleam' = builtins.import ./../gleam.nix;
  Thing = (builtins.import ./../gleam.nix).Error;
  
  main = { }: Thing;
in
{ inherit main; }
