.jjconflict-side-1/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__qualified_ok_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Ok }"
---
let
  gleam' = builtins.import ./../gleam.nix;
  
  main = { }: gleam'.Ok;
in
{ inherit main; }
